--- a/pom.xml
+++ b/pom.xml
@@ -10,8 +10,7 @@
   <packaging>war</packaging>
 
   <name>BinarySearchOnJDK11 Maven Webapp</name>
-  <!-- FIXME change it to the project's website -->
-  <url>http://www.example.com</url>
+  <url>https://github.com/make-me-unsee-it/BinarySearchOnJDK11</url>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
